--- a/styles.css
+++ b/styles.css
@@ -1,364 +1,379 @@
-@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700;900&family=Playfair+Display:wght@400;500;600;700;800;900&display=swap");
-
-*,
-*::before,
-*::after {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato&family=Playfair+Display:wght@700&display=swap');
+/* set the defauld margin and padding zero */
+*{
+    padding:0;
+    margin:0;
 }
 
-body {
-  background-color: #f9f4e8;
-  line-height: 1.3;
+html:focus-within{
+    scroll-behavior: smooth;
+}
+/* css variables */
+
+:root{
+    --backgroundcolor:#fff7f8;
+    --btn-color:#4977ea;
+    --text-color: #525252;
 }
 
-.main-container {
-  width: 80%;
-  margin: 0 auto;
+
+body{
+    background-color:var(--backgroundcolor);
+    font-family: 'Lato', sans-serif;
+    cursor: default;
+    overflow-x: hidden;
 }
 
-.flex-container {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+/* Navigation bar styles start */
+
+
+.navbar{
+    display: flex;
+    flex-direction: row;
+    /* background-color: rgb(54, 54, 52); */
+    padding: 30px 8px 5px 0px;
+    justify-content: space-around;
+    align-items: center;
 }
 
-.logo-container span {
-  position: relative;
-  top: -5px;
+.logo{
+    display: flex;
 }
 
-/* navbar styling */
-
-.navbar {
-  font-family: "lato", sans-serif;
-  display: flex;
-  align-items: center;
-  padding: 2em 0;
+.logo img{
+    margin-right: 10px;
 }
 
-.nav-list {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-grow: 1;
+.gradient-btn{
+    padding: 8px 14px;
+    border: none;
+    border-radius: 20px;
+    cursor: pointer;
+    outline: none;
+    background:  linear-gradient(to right, rgb(240, 212, 120) 20%, rgb(248, 70, 21) 71%, rgb(243, 71, 49) 71%);
 }
 
-.nav-list li {
-  list-style: none;
-  margin-left: 1em;
+.nav-menue{
+    display: flex;
+    flex-direction: row;
 }
 
-.nav-list li:nth-of-type(1) {
-  margin-left: auto;
+.nav-item{
+    list-style: none;
+    margin: 0px 25px;
 }
 
-.nav-list li:nth-of-type(4) {
-  margin-left: auto;
+.nav-item a{
+    text-decoration: none;
+    color: var(--text-color);
+    font-size: 16px;
+    font-family: 'Lato', sans-serif;
+}
+.nav-item:hover a{
+    color: black;
+    font-weight: bold;
 }
 
-.nav-list li a {
-  text-decoration: none;
-  color: #535353;
+.login-signup{
+    display: flex;
+    flex-direction: row;
+    margin: 0px 10px;
 }
 
-.btn {
-  color: #fff;
-  background-color: #4977ea;
-  border-radius: 4px;
-  display: inline-block;
-  padding: 1em 1.2em;
-  font-weight: 500;
-  text-decoration: none;
+.btn{
+    padding: 14px 15px;
+    background: var(--btn-color);
+    border: none;
+    border-radius: 3px;
+    cursor: pointer;
+    font-family: 'Open Sans', sans-serif;
+    color: white;
+    font-weight: 600;
+
 }
 
-.nav-list .btn {
-  color: #fff;
+.btn:hover{
+    background-color: blue;
+
 }
 
-.navbar span {
-  background: rgb(234, 176, 82);
-  background: linear-gradient(
-    90deg,
-    rgba(234, 176, 82, 1) 5%,
-    rgba(234, 91, 113, 1) 50%
-  );
-  color: #fff;
-  margin-left: 1em;
-  font-size: 0.8em;
-  padding: 0.5em;
-  border-radius: 20px;
+.btn1{
+    background: none;
+    color: var(--text-color);
+    font-weight: 600;
+}
+.btn1:hover{
+    background: none;
+    color: black;
+    font-weight: bold;
 }
 
-/* Hero section styling */
-
-.hero-section {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
-  font-family: "Lato", sans-serif;
-  margin-top: auto;
-}
-
-.input-container input {
-  padding: 1em 1.2em;
-  border-radius: 4px;
-  border: none;
-  font-weight: 500;
-  font-family: "Lato", sans-serif;
-  font-size: 1em;
-  margin-right: 0.5em;
-  width: 50%;
-}
-
-.input-container {
-  margin-bottom: 1em;
-}
-
-.text-container h1 {
-  font-family: "Playfair Display", sans-serif;
-  font-size: 4em;
-  margin-bottom: 0.245em;
-}
-
-.text-container p {
-  font-size: 1.4em;
-  color: #535353;
-  font-weight: 400;
-  margin-bottom: 0.7em;
-}
-
-.checkmark-container img {
-  position: relative;
-  top: 5px;
-  margin-right: 0.6em;
-}
-
-/* Image container  */
-
-.image-container .model-img {
-  z-index: 100;
-}
-
-.image-container .purple {
-  z-index: 90;
-  transform: rotate(-15deg);
-}
-
-.image-container .pink {
-  z-index: 80;
-  transform: rotate(-30deg);
-}
-
-.image-container .blue {
-  z-index: 70;
-  transform: rotate(-45deg);
-}
-
-.img-content {
-  position: relative;
-  height: 100%;
-}
-
-.img-content img {
-  position: absolute;
-  width: 21em;
-  top: 0;
-  right: 0;
-}
-
-/* footer */
-
-.footer {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  font-family: "Lato", sans-serif;
-  padding: 2em 0 2em 0;
-  margin-top: auto;
-}
-
-.footer-list {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.footer-list li {
-  list-style: none;
-  margin-right: 1em;
-}
-
-.footer-list a {
-  text-decoration: none;
-  color: #535353;
-}
-
-.help-container {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.help-container img {
-  margin-right: 1em;
-}
-
-.help-text .first {
-  font-family: "Playfair Display", sans-serif;
-}
-
-.help-text .second {
-  font-weight: 700;
-}
-
-.navbar .ham-icon {
-  display: none;
-  cursor: pointer;
-  padding: 1em;
-}
-
-@media (max-width: 1025px) {
-  .main-container {
-    width: 90%;
-    overflow: hidden;
-  }
-
-  .text-container h1 {
-    font-size: 3em;
-  }
-
-  .text-container p {
-    font-size: 1.2em;
-  }
-
-  .image-container img {
-    width: 22em;
-  }
-}
-
-@media (max-width: 835px) {
-  .hero-section {
-    grid-template-areas:
-      "image-container"
-      "text-container";
-    grid-template-columns: 1fr;
-    gap: 3em;
-  }
-
-  .image-container {
-    grid-area: image-container;
-    min-height: 25em;
-  }
-
-  .text-container {
-    grid-area: text-container;
-  }
-
-  .navbar {
-    position: relative;
-    justify-content: space-between;
-  }
-
-  .nav-list {
-    flex-direction: column;
-    position: absolute;
-    top: 100%;
-    right: 0;
-    background: #fff;
-    color: #f9f4e8;
-    border: 1px solid #fff;
-    border-radius: 4px;
-    z-index: 101;
-    opacity: 0;
-    transform: translateY(-25em);
-    transition: transform 350ms ease-in-out;
-  }
-
-  .nav-list.active {
-    opacity: 1;
-    transform: translateY(0);
-  }
-
-  .nav-list li {
-    margin: 0;
-    width: 100%;
-    text-align: center;
-    border-bottom: 1px solid #f9f4e8;
-  }
-
-  .nav-list li a {
-    display: block;
-    padding: 1.2em 3.6em;
-    font-weight: 900;
-  }
-
-  .nav-list li a:hover,
-  .nav-list li a:focus {
-    background: #f9f4e8;
-  }
-
-  .nav-list .btn {
+.hamburger-icon{
+    cursor: pointer;
     display: none;
-  }
-
-  .navbar .ham-icon {
-    display: block;
-  }
-
-  .img-content img {
-    left: 50%;
-    margin-left: -25%;
-    top: 50%;
-    margin-top: -25%;
-  }
 }
 
-@media (max-width: 600px) {
-  .image-container img {
-    width: 18em;
-    top: 39%;
-    left: 39%;
-  }
+/* Navigation bar styles end */
 
-  .text-container h1 {
-    font-size: 2.5em;
-  }
 
-  .text-container p {
-    font-size: 1.045em;
-  }
+/* section content start */
 
-  .input-container input {
-    width: 100%;
-    display: block;
-    margin-bottom: 0.7em;
-  }
+.content{
+    margin: 50px 20px;
+    padding: 19px 2px;
+    margin-top: 120px;
+    display: flex;
+}
 
-  .btn {
-    width: 100%;
-    text-align: center;
-  }
-
-  .footer-list {
-    width: 100%;
-    justify-content: left;
-    margin-bottom: 2em;
-  }
-
-  .help-container {
-    width: 100%;
-    justify-content: left;
-  }
-
-  .footer {
-    padding: 2em 0 1em 0;
+.left{
+    width: 40%;
+    display: flex;
     flex-direction: column;
-  }
+    padding: 10px 15px;
 }
 
-@media (max-width: 400px) {
-  .image-container img {
-    width: 17em;
-  }
+.left h3 ,p{
+    text-align: justify;
+
+}
+
+.left h3{
+    font-family: 'Playfair Display', serif;
+    text-align: start;
+    font-size: 3rem;
+    word-spacing: 2px !important;
+}
+
+.left p{
+    color: var(--text-color);
+    font-size: 16px;
+    margin: 7px 0px 12px 0px;
+    font-family: 'Lato', sans-serif;
+}
+
+.check{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+.email{
+    display: flex;
+    align-items: center;
+}
+.email input{
+    border: none;
+    padding: 14px 15px;
+    outline: none;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 1rem;
+    transition: all 0.2s ease-in-out;
+    border-radius: 5px;
+}
+
+.email input:focus{
+    border: 1px solid blue;
+   
+}
+.email input::placeholder{
+    font-family: 'Open Sans', sans-serif;
+    
+}
+
+
+.check{
+    margin-top: 5px;
+}
+
+.check img{
+    margin-right: 10px;
+    width: 24px;
+}
+
+.check p{
+    font-size: 16px;
+}
+
+
+.right{
+    width: 60%;
+    position: relative;
+}
+
+.position{
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
+#img1{
+    transform: rotate(-35deg);
+}
+
+#img2{
+    transform: rotate(-26deg);
+}
+
+#img3{
+    transform: rotate(-11deg);
+}
+
+/* section content end  */
+
+
+
+
+/* start of footer */
+
+.footer{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    margin: 200px 50px 10px 50px;
+}
+
+.link{
+    display: flex;
+}
+
+.link li {
+    list-style: none;
+    margin: 0px 10px;
+    
+}
+.link li a{
+    text-decoration: none;
+    color: var(--text-color);
+
+}
+
+.help {
+    display: flex;
+    flex-direction: row;
+}
+.question{
+    margin-left: 7px;
+    display: flex;
+    flex-direction: column;
+}
+
+.question h4{
+    font-family: 'Lato', sans-serif;
+    font-weight: lighter;
+}
+.question p{
+    font-family: 'Playfair Display', serif;
+    font-size: 14px;
+
+}
+
+
+/* end of footer */
+
+/* adding medila query for tablet */
+
+@media only screen and (max-width: 1034px) and (min-width: 685px) {
+    .navbar{
+        justify-content: space-between;
+        margin: 0px 15px;
+
+    }
+    .nav-menue{
+        display: none;
+    }
+    .login-signup{
+        display: none;
+    }
+
+    .hamburger-icon{
+        display: block;
+    }
+
+    .content{
+        flex-direction: column-reverse;
+    }
+
+    .left{
+        width: 100%;
+    }
+    .right {
+        width: 70%;
+        height: 400px;
+    }
+    .position {
+        left: 41%;
+    }
+    
+}
+
+
+/* adding media query for phones */
+
+@media only screen and (max-width: 685px) {
+
+    .navbar{
+        justify-content: space-between;
+        margin: 0px 15px;
+
+    }
+    .nav-menue{
+        display: none;
+    }
+    .login-signup{
+        display: none;
+    }
+    .logo{
+        margin: 0px 10px;
+    }
+
+    .hamburger-icon{
+        display: block;
+    }
+
+    .content{
+        flex-direction: column-reverse;
+    }
+
+    .email input:focus{
+        margin-bottom: 5px;
+    }
+    .left{
+        width: 100%;
+    }
+    .right {
+        width: 70%;
+        height: 400px;
+    }
+
+    .right img{
+        width: 300px;
+    }
+    .position {
+        left: 33%;
+    }
+
+    .content{
+        margin-bottom: 20px;
+    }
+
+    .email{
+        flex-direction: column;
+        justify-content: center;
+        align-items: initial;
+    }
+
+    .footer{
+        flex-direction: column;
+        align-items:flex-start ;
+        justify-content: flex-start;
+        width: 100%;
+        margin: 11px 22px;
+    }
+
+    .link{
+        margin: 5px 0px 55px 0px;
+    }
+
+
 }
